src/styles/globals.scss
// Din
@font-face {
    font-family: "title-font";
    src: url("../assets/fonts/din/DIN\ Condensed\ Bold.woff2") format("woff2"),
        url("../assets/fonts/din/DIN\ Condensed\ Bold.woff") format("woff");
    font-weight: bold;
    font-style: normal;
    font-display: block;
}

// Arial
@font-face {
    font-family: "subtitle-font";
    src: url("../assets/fonts/arial/Arial.woff2") format("woff2"),
        url("../assets/fonts/arial/Arial.woff") format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: block;
}

// Century-Gothic
@font-face {
    font-family: "text-font";
    src: url("../assets/fonts/century_gothic/Monotype\ -\ Century\ Gothic.woff2") format("woff2"),
        url("../assets/fonts/century_gothic/Monotype\ -\ Century\ Gothic.woff") format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: block;
}

@font-face {
    font-family: "text-font";
    src: url("../assets/fonts/century_gothic/Monotype\ -\ Century\ Gothic\ Bold.woff2") format("woff2"),
        url("../assets/fonts/century_gothic/Monotype\ -\ Century\ Gothic\ Bold.woff") format("woff");
    font-weight: bold;
    font-style: normal;
    font-display: block;
}

$primary-color: hsla(339, 77%, 48%, 1);
$text-color :hsla(0, 0%, 0%, 1);
$bg-color : hsla(30, 100%, 99%, 1);
$listing-other-color: hsla(180, 0%, 44%, 1);
$listing-main-color:hsla(210, 11%, 15%, 1);



$subtitle-size: 0.813rem;



*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-color: $bg-color;
    color: $text-color;
}

